修改:部分内容排版并更改网页阅读版内容

--- a/gitbook_doc/jdk_jvm_juc-learning/对象在内存中的布局.md
+++ b/gitbook_doc/jdk_jvm_juc-learning/对象在内存中的布局.md
@@ -80,7 +80,7 @@ jvm通过klass pointer判断对象属于哪个类。
  </dependency>
 ````
 
-相信各位同学可能还是对上面的概念优点迷糊，那就可以使用jol工具来查看一下
+相信各位同学可能还是对上面的概念有点迷糊，那就可以使用jol工具来查看一下
 对象的真实布局，在实践之前，请各位同学带着几个问题看下面的内容:
  
 - hashCode方法返回的真是对象内存地址吗?
