--- a/gitbook_doc/jdk_jvm_juc-learning/类的生命周期.md
+++ b/gitbook_doc/jdk_jvm_juc-learning/类的生命周期.md
@@ -125,8 +125,10 @@ PlatformClassLoader和AppClassLoader负责加载jdk提供的类，
 
 #### 类加载器的命名空间
 **每个类加载器实例都有自己的命名空间，命名空间由该加载器及其所有父加载器加载的所有的类组成。**
-在同一个命名空间中(一个类加载器实例)，不会出现全限定名(包括包名)相同的2个类(不会加载2个相同名称的类)。
-在不同的命名空间中(多个类加载器实例)，可能会出现全限定名(包括包名)相同的2个类(可能加载2个相同名称的类)。
+
+- 在同一个命名空间中(**一个类加载器实例**)，不会出现全限定名(包括包名)相同的2个类(**不会加载2个相同名称的类**)。
+
+- 在不同的命名空间中(**多个类加载器实例**)，可能会出现全限定名(包括包名)相同的2个类(**可能加载2个相同名称的类**)。
 
 **PS:见:[测试](https://github.com/guang19/framework-learning/blob/master/jdk_jvm_juc-learning/src/main/java/com/github/guang19/jvm/classloader/MyClassLoader.java)**
 
