修改:java基础部分内容

--- a/gitbook_doc/jdk_jvm_juc-learning/对象在内存中的布局.md
+++ b/gitbook_doc/jdk_jvm_juc-learning/对象在内存中的布局.md
@@ -67,7 +67,7 @@ jvm通过klass pointer判断对象属于哪个类。
 #### 对齐填充
 **Java对象的小必须是8字节的倍数**,像13,15这种非8的倍数的对象的大小,
 不足或多余的部分就要使用对齐填充数据补齐。
-如果Java对象大小正好是8的倍数,那么就无需对齐填充数据。
+**如果Java对象大小正好是8的倍数,那么就无需对齐填充数据。**
 
 ### jol工具查看对象布局
 
