更新:java基础部分错误内容

--- a/gitbook_doc/jdk_jvm_juc-learning/对象在内存中的布局.md
+++ b/gitbook_doc/jdk_jvm_juc-learning/对象在内存中的布局.md
@@ -14,7 +14,7 @@
 
 # 对象在内存中的布局(64位)
 
-对象在内存中的布局,在32位和64位上的实现也是不同的，以我的机器为例(64位)
+对象在内存中的布局,在32位和64位操作系统上的实现也是不同的，以我的机器为例(64位)
 
 **对象在内存中由 对象头,实例数据,对齐填充三部分组成。**
 
@@ -22,11 +22,10 @@
 
 ![对象内存布局](../../img/jdk_jvm_juc/对象在内存中的布局.png)
 
-**可以使用openjdk-jol工具查看对象的内存布局**
     
 ### 对象头
-在hotspot虚拟机中的对象头由2部分组成(**如果是数组,对象头还会保存数组长度**):
-mark 和 metadata(包括klass* , compressed_klass)(见oop.hpp文件)
+在hotspot虚拟机中的对象头由2部分组成:
+mark 和 metadata(包括klass* , compressed_klass)(**如果是数组,对象头还会保存数组长度**)(见oop.hpp文件)
 
 ![对象头组成1](../../img/jdk_jvm_juc/对象头的markword组成1.png)
 
@@ -80,15 +79,15 @@ jvm通过klass pointer判断对象属于哪个类。
  </dependency>
 ````
 
-相信各位同学可能还是对上面的概念有点迷糊，那就可以使用jol工具来查看一下
+相信各位同学可能还是对上面的概念有点模糊，那就可以使用jol工具来查看一下
 对象的真实布局，在实践之前，请各位同学带着几个问题看下面的内容:
+ 
+- hashcode真实存在吗?
  
 - hashCode方法返回的真是对象内存地址吗?
 
-- hashcode真实存在吗?
-
 #### 查看对象内存布局
-一下是我自己的一个测试demo，详解了jol的使用:
+以下是我自己的一个测试demo，详解了jol的使用:
 
 ![jol工具查看对象内存布局1](../../img/jdk_jvm_juc/jol工具查看对象内存布局1.png)
 
