修改: RDBMS部分细节内容

--- a/gitbook_doc/rdbms-learning/索引.md
+++ b/gitbook_doc/rdbms-learning/索引.md
@@ -5,7 +5,7 @@
         * [索引的优点](#索引的优点)
         * [索引的缺点](#索引的缺点)
         * [B树和B 树区别](#b树和b树区别)
-        * [Hash索引 和 B 树索引 优劣](#hash索引-和-b树索引-优劣)
+        * [Hash索引](#hash索引)
      * [索引类型](#索引类型)
         * [主键索引(Primary Key)](#主键索引primary-key)
         * [二级索引(辅助索引)](#二级索引辅助索引)
@@ -43,10 +43,10 @@
 >打个比方: 我们在查字典的时候，如果没有目录，
 >那我们就只能一页一页的去找我们需要查的那个字，速度很慢。
 >
->如果有目录了，我们只需要先去目录里查找字的位置，然后直接翻到那一页就行了。
+>如果有目录了，我们只需要先去目录里查找字所在的页数，然后直接翻到那一页就行了。
 
 #### 索引的优点
-**索引最大的优点就是数据的检索效率高，这也是为什么要创建和使用索引的原因。
+**索引最大的优点就是数据的检索效率高，这也是创建和使用索引的原因。
 毕竟大部分系统的读请求总是大于写请求的。**
 
 #### 索引的缺点
@@ -58,7 +58,7 @@
 #### B树和B+树区别
 
 * **B树的所有节点既存放 键(key) 也存放 数据(data);**
-而**B+树只有叶子节点存放 key 和 data，其他内节点只存放key。**
+而**B+树只有叶子节点存放 key 和 data，其他的内节点只存放key。**
 
 * **B树的叶子节点都是独立的;B+树的叶子节点有一条引用链指向与它相邻的叶子节点。**
 
@@ -69,7 +69,7 @@
 
 ![B+树](../../img/database/mysql/B+树.png)
 
-#### Hash索引 和 B+树索引 优劣
+#### Hash索引
 * **Hash索引定位快**
 >Hash索引指的就是Hash表，最大的优点就是能够在很短的时间内，
 >根据Hash函数定位到数据所在的位置，这是B+树所不能比的。
