--- a/gitbook_doc/jdk_jvm_juc-learning/对象在内存中的布局.md
+++ b/gitbook_doc/jdk_jvm_juc-learning/对象在内存中的布局.md
@@ -2,9 +2,9 @@
 
    * [对象在内存中的布局(64位)](#对象在内存中的布局64位)
       * [对象头](#对象头)
-         * [markword和metadata](#markword和metadata)
          * [实例数据](#实例数据)
          * [对齐填充](#对齐填充)
+         * [markword和metadata](#markwordmetadata)
       * [jol工具查看对象布局](#jol工具查看对象布局)
          * [查看对象内存布局](#查看对象内存布局)
          * [hashcode](#hashcode)
@@ -14,26 +14,47 @@
 
 # 对象在内存中的布局(64位)
 
-对象在内存中的布局,在32位和64位操作系统上的实现也是不同的，以我的机器为例(64位)
+鉴于此章已经涉及到jvm的内容了，所以各位同学在此章需要对JVM的一些基本术语有所了解。
+这里我找到了openjdk官方对于hotspot的一些基本词汇表，各位同学在学习的时候，可以参考这个词汇表:
+[OpendJdk Hotspot Glossary](https://openjdk.java.net/groups/hotspot/docs/HotSpotGlossary.html)
+
+**对象在内存中的布局,在32位和64位操作系统上的实现也是不同的，以我的机器为例(64位)**
 
 **对象在内存中由 对象头,实例数据,对齐填充三部分组成。**
 
-其中**实例数据和对齐填充是不固定的**，下面会讲到。
+**其中实例数据和对齐填充是不固定的**。
 
 ![对象内存布局](../../img/jdk_jvm_juc/对象在内存中的布局.png)
-
+           
+#### 实例数据
+实例数据存储着对象在程序中被定义的各个字段的数据,也就是对象的字段的
+数据。**如果一个类没有字段，也就不存在实例数据，所以这是它不固定的原因。**
+        
+#### 对齐填充
+**Java对象的小必须是8字节的倍数**,像13,15这种非8的倍数的对象的大小,
+不足或多余的部分就要使用对齐填充数据补齐。
+**如果Java对象大小正好是8的倍数,那么就无需对齐填充数据。**
     
 ### 对象头
+关于对象头，在hotspot中，opendjdk是这样描述的:
+
+![对象头描述](../../img/jdk_jvm_juc/对象头的描述.png)
+
+大意是说: **对象头是jvm在每次GC时管理的对象的通用结构，包含了对象的布局，类型(Class Type),GC状态，
+同步状态和hashcode等信息，在数组中，还会跟随数组的长度。java对象和vm对象都具有通用的对象头格式。**
+
 在hotspot虚拟机中的对象头由2部分组成:
 mark 和 metadata(包括klass* , compressed_klass)(**如果是数组,对象头还会保存数组长度**)(见oop.hpp文件)
 
 ![对象头组成1](../../img/jdk_jvm_juc/对象头的markword组成1.png)
 
+mark/markword就是说面说过的，保存了对象的GC状态，同步状态和hashcode等信息。
+
 下面是mark/markword的组成(见:markOop.hpp头文件):
 
 ![对象头组成2](../../img/jdk_jvm_juc/对象头的markword组成2.png)
 
-对象处于每种状态时的锁标志位都不同(见:markOop.hpp头文件):
+对象处于不同的同步状态和GC状态，markword都不同(见:markOop.hpp头文件):
 
 ![对象头组成3](../../img/jdk_jvm_juc/对象头的markword组成3.png)
 
@@ -58,15 +79,6 @@ jvm通过klass pointer判断对象属于哪个类。
 
 所以**jvm提供了压缩指针(Compressed Klass)来节省空间，在64位系统下，压缩指针是默认开启的，
 可以使用-XX:-UseCompressedOops来关闭指针压缩。**
-           
-#### 实例数据
-实例数据存储着对象在程序中被定义的各个字段的数据,也就是对象的字段的
-数据。**如果一个类没有字段，也就不存在实例数据，所以这是它不固定的原因。**
-        
-#### 对齐填充
-**Java对象的小必须是8字节的倍数**,像13,15这种非8的倍数的对象的大小,
-不足或多余的部分就要使用对齐填充数据补齐。
-**如果Java对象大小正好是8的倍数,那么就无需对齐填充数据。**
 
 ### jol工具查看对象布局
 
@@ -105,7 +117,7 @@ jvm通过klass pointer判断对象属于哪个类。
 ![jol工具查看对象内存布局2](../../img/jdk_jvm_juc/jol工具查看对象内存布局2.png)
 
 我们发现，在调用hashcode方法后，对象的hashcode的值与打印结果完全一致，
-到这里可以初步猜想:
+到这里可以初步猜想(没有实际验证):
 
 **hashcode的值也是不固定存在的。**
 
@@ -120,4 +132,4 @@ jvm通过klass pointer判断对象属于哪个类。
 
 ![hashcode方法源码](../../img/jdk_jvm_juc/hashcode方法源码.png)
 
-可以看到hashcode有多种返回策略:随机数，自增长序列，关联地址等多种方式。
+可以看到hashcode有:随机数，自增长序列，关联地址等多种生成策略。
