修改:部分错误内容

--- a/gitbook_doc/linux-learning/操作系统的内核.md
+++ b/gitbook_doc/linux-learning/操作系统的内核.md
@@ -62,7 +62,7 @@ unix与linux的体系架构：分为用户态与内核态。
 
 #### 虚拟内存(Virtual Memory)
 **虚拟内存是操作系统为了更高效率使用物理内存的一种概念，它是对物理内存的抽象。**
-windows上的虚拟内存和Linux上的swap交换空间都是虚拟内存的一种技术。
+windows上的虚拟内存和Linux上的swap交换空间都是虚拟内存的一种实现技术。
 
 #### Swap交换空间
 简单理解: 当某个应用程序所需的内存空间不够了，
