--- a/gitbook_doc/linux-learning/进程间通信.md
+++ b/gitbook_doc/linux-learning/进程间通信.md
@@ -44,7 +44,7 @@
 
 #### 命名管道
 命民管道提供一个路径名与之关联，并以文件的形式存于文件系统中。
-这样即使进程之间不存在亲缘关系，只要进程可以访问到该路径，就可以通过命名管道进行通信
+这样即使进程之间不存在亲缘关系，只要进程可以访问到该路径，就可以通过命名管道进行通信。
 
 #### 信号
 信号是用于进程间互相通信，通知进程某个事件已经发生的一种机制。
