--- a/gitbook_doc/datastructure_algorithm/数据结构.md
+++ b/gitbook_doc/datastructure_algorithm/数据结构.md
@@ -1,47 +1,18 @@
 <!-- TOC -->
-
-   * [数据结构与算法](#数据结构与算法)
-      * [数据结构](#数据结构)
-         * [线性数据结构](#线性数据结构)
-            * [线性表](#线性表)
-            * [队列](#队列)
-            * [栈](#栈)
-         * [非线性数据结构](#非线性数据结构)
-            * [稀疏数组](#稀疏数组)
-      * [算法](#算法)
-         * [排序算法](#排序算法)
+ 
+ * [数据结构](#数据结构)
+   * [线性数据结构](#线性数据结构)
+      * [线性表](#线性表)
+      * [队列](#队列)
+      * [栈](#栈)
+   * [非线性数据结构](#非线性数据结构)
+      * [稀疏数组](#稀疏数组)
 
 <!-- /TOC -->
 
-# 数据结构与算法
+# 数据结构
 
-往往有人把数据结构与算法混为一谈，以为学习数据结构就是在学习算法，或者以为学习算法
-就是在学习数据结构，这样的理解是不对的。
-
-数据结构与算法属于两种不同的学科，数据结构主要讲的是数据存储的问题，而算法主要讲的
-是数据处理的问题，这两种学科的内容是不一样的。不过既然都涉及都数据层面，
-且有些数据结构是随着某种算法的诞生而被发明出来的，所以前辈计算机科学家们把它们归为一门课程。
-
-````text
-如有错误之处，请多多指教
-````
-
-PS:部分的图片来源于网上，如有侵权，请联系俺，俺会立刻删除。
-
-此外关于数据结构与算法,我推荐一个非常好的可视化网站: 
-[数据结构与算法可视化](https://www.cs.usfca.edu/~galles/visualization/Algorithms.html)
-
-
-## 数据结构
-
-数据结构是计算机存储数据的方式，不同类型的数据，其存储数据的方式也各不相同。
-我们的图片，音视频等内容以何种方式存储在磁盘上，就取决于这种类型的数据采用了什么样的数据结构。
-
-数据结构按逻辑划分，大致可以分为线性数据结构和非线性数据结构(包括树，图等)。如果按具体的存储结构划分，
-还可以分为顺序存储结构，散列存储结构，索引存储结构等等。
-
-
-### 线性数据结构
+## 线性数据结构
 
 **线性数据结构**是一个有序数据元素的集合，其中数据元素之间的关系是一对一的关系。
 常见的线性结构有：**线性表，栈，队列，数组**等。
@@ -73,7 +44,7 @@ last节点的最后一个节点指向first节点。
 链表实现的线性表，增删改操作的性能是其最大的优点，但链表并不支持下标这种RandomAccess随机访问的方式，
 所以链表实现的线性表适用于写多读少的环境。
 
-![单向链表和双向链表](../img/datastructure_algorithm/单向链表和双向链表.png)
+![单向链表和双向链表](../../img/datastructure_algorithm/单向链表和双向链表.png)
 
 
 线性表实现源码(链式队列使用的是双端链表实现的):
@@ -93,7 +64,7 @@ last节点的最后一个节点指向first节点。
 入队操作是将一个元素添加到队尾，出队操作就是取出队首的元素。
 
 
-![简单队列](../img/datastructure_algorithm/简单队列.png)
+![简单队列](../../img/datastructure_algorithm/简单队列.png)
 
 
 队列的底层可以用数组和链表实现。
@@ -115,7 +86,7 @@ last节点的最后一个节点指向first节点。
 栈有两个主要的操作: 入栈(push) 和 出栈(pop)。
 入栈操作是将一个元素置于栈顶，出栈操作是将栈顶元素取出。
 
-![栈](../img/datastructure_algorithm/栈.png)
+![栈](../../img/datastructure_algorithm/栈.png)
 
 栈同样可以由数组和链表实现，对于数组实现的栈来说，其容量肯定也有限制，所以个人认为实现栈的较好的方式是链表。
 
@@ -125,7 +96,7 @@ last节点的最后一个节点指向first节点。
 
 
 
-### 非线性数据结构
+## 非线性数据结构
 **非线性数据结构**中各个数据元素不再保持在一个线性序列中，每个数据元素可能与零个或者多个其他数据元素发生联系。
 根据关系的不同，可分为层次结构和群结构。
 
@@ -142,20 +113,10 @@ last节点的最后一个节点指向first节点。
 
 如图所示: 有大部分的空间是无用的.
 
-![稀疏数组](../img/datastructure_algorithm/稀疏数组.png)
+![稀疏数组](../../img/datastructure_algorithm/稀疏数组.png)
 
 那么我们可以使用稀疏数组进行压缩,稀疏数组的第一部分所记录的是原数组的行数和列数
 
 第二部分记录原数组中的有效值的位置和值,经过压缩后只需要声明n*3的数组,n表示有效值的个数
 
-![稀疏数组2](../img/datastructure_algorithm/稀疏数组2.png)
-
-
----
-
-
-## 算法
-
-### 排序算法
-
-冒泡排序源码: [BubbleSort](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/algorithm/sort/BubbleSort.java)
+![稀疏数组2](../../img/datastructure_algorithm/稀疏数组2.png)
