修改:部分错误内容

--- a/gitbook_doc/datastructure_algorithm/数据结构.md
+++ b/gitbook_doc/datastructure_algorithm/数据结构.md
@@ -120,3 +120,8 @@ last节点的最后一个节点指向first节点。
 第二部分记录原数组中的有效值的位置和值,经过压缩后只需要声明n*3的数组,n表示有效值的个数
 
 ![稀疏数组2](../../img/datastructure_algorithm/稀疏数组2.png)
+
+
+稀疏数组源码:
+
+[稀疏数组](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/datastructure/spasearray/SparseArray.java)
