--- a/gitbook_doc/datastructure_algorithm/数据结构与算法.md
+++ b/gitbook_doc/datastructure_algorithm/数据结构与算法.md
@@ -13,5 +13,7 @@
 
 PS:部分的图片来源于网上，如有侵权，请联系俺，俺会立刻删除。
 
+**由于数据结构与算法部分的内容不比普通的某一项技术，它的内容实在是很多，且较为复杂，我会尽我最大能力持续更新的。**
+
 此外关于数据结构与算法,我推荐一个非常好的可视化网站: 
 [数据结构与算法可视化](https://www.cs.usfca.edu/~galles/visualization/Algorithms.html)
