修改:<完全使用GNU*Linux学习>文件名

--- a/gitbook_doc/datastructure_algorithm/数据结构.md
+++ b/gitbook_doc/datastructure_algorithm/数据结构.md
@@ -103,24 +103,19 @@ last节点的最后一个节点指向first节点。
 常见的非线性数据结构主要有矩阵(多维数组)，广义表，树，图等。
 
 #### 稀疏数组
-当一个数组中大部分元素为0，或者为同一个值的数组时，可以使用稀疏数组来保存该数组。
+稀疏数组又被成为稀疏矩阵，它本质上是一个二维数组。
+当一个数组中大部分元素都未被使用，仅有少部分被占用，这就造成了空间的浪费。
+为了解决这种问题，可以使用稀疏数组来保存该数组的数据，稀疏数组可以理解为原数组被压缩后的数组。
 
-处理方法：
 
-1.记录数组有几行几列，有多少个不同的值。
-
-2.把具有不同值的元素的行列及值记录在一个更小规模的数组中。实现程序的压缩。
-
-如图所示: 有大部分的空间是无用的.
-
+如图所示，有大部分的空间是无用的:
+ 
 ![稀疏数组](../../img/datastructure_algorithm/稀疏数组.png)
 
-那么我们可以使用稀疏数组进行压缩,稀疏数组的第一部分所记录的是原数组的行数和列数
-
-第二部分记录原数组中的有效值的位置和值,经过压缩后只需要声明n*3的数组,n表示有效值的个数
+我们使用稀疏数组进行压缩,稀疏数组的第一部分所记录的是原数组的行数和列数，即元数据。
+第二部分记录原数组中的有效值的位置和值。这样经过压缩后的数组不再需要分配原数组那么大的空间，解决了空间浪费的问题。
 
 ![稀疏数组2](../../img/datastructure_algorithm/稀疏数组2.png)
-
 
 稀疏数组源码:
 
