增加&修改:数据结构和算法&部分文章的语义错误

--- a/gitbook_doc/datastructure_algorithm/数据结构.md
+++ b/gitbook_doc/datastructure_algorithm/数据结构.md
@@ -7,7 +7,8 @@
       * [栈](#栈)
    * [非线性数据结构](#非线性数据结构)
       * [稀疏数组](#稀疏数组)
-
+      * [Hash表](#hash表)
+      
 <!-- /TOC -->
 
 # 数据结构
@@ -98,9 +99,8 @@ last节点的最后一个节点指向first节点。
 
 ## 非线性数据结构
 **非线性数据结构**中各个数据元素不再保持在一个线性序列中，每个数据元素可能与零个或者多个其他数据元素发生联系。
-根据关系的不同，可分为层次结构和群结构。
+根据关系的不同，可分为层次结构和群结构。常见的非线性数据结构主要有矩阵(多维数组)，广义表，树，图等。
 
-常见的非线性数据结构主要有矩阵(多维数组)，广义表，树，图等。
 
 #### 稀疏数组
 稀疏数组又被成为稀疏矩阵，它本质上是一个二维数组。
@@ -120,3 +120,17 @@ last节点的最后一个节点指向first节点。
 稀疏数组源码:
 
 [稀疏数组](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/datastructure/spasearray/SparseArray.java)
+
+
+#### Hash表
+Hash表是一种能够快速访问，快速删除与修改的数据结构。我们知道数组的访问速度非常快，链表的增删改等操作的效率也是
+非常高的，那有没有一种数据结构能够融合数组和链表的优点呢?可以说Hash表就是这样一种数据结构。
+
+Hash表是通过关键码(key)进行访问，通过Hash表存储数据的数据结构，它通过某种映射函数将关键码映射到
+Hash表的某个位置从而进行快速定位。 其中映射函数被称为散列函数(Hash函数)，Hash表被称为散列表。
+
+
+![Hash表](../../img/datastructure_algorithm/Hash表.png)
+
+
+Hash表源码: [HashTable](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/datastructure/hash/HashTable.java)
