增加:堆排序&树结构

--- a/gitbook_doc/rdbms-learning/索引.md
+++ b/gitbook_doc/rdbms-learning/索引.md
@@ -101,7 +101,7 @@ SELECT * FROM tb1 WHERE id < 500;
 
 **在mysql的InnoDB的表中，当没有显示的指定表的主键时，
 InnoDB会自动先检查表中是否有唯一索引的字段。
-如果有，则选择改字段为默认的主键，否则InnoDB将会自动创建一个6Byte的自增主键。**
+如果有，则选择该字段为默认的主键，否则InnoDB将会自动创建一个6Byte的自增主键。**
 
 #### 二级索引(辅助索引)
 **二级索引又称为辅助索引，是因为二级索引的叶子节点存储着主键。
@@ -195,7 +195,7 @@ MYISAM引擎的表的.MYI文件包含了表的索引，
 >试想一种情况，用户准备使用SQL查询用户名，而用户名字段正好建立了索引。
 
 ````text
- SELECT name FROM table WHERE username='guang19';
+ SELECT name FROM table WHERE name='guang19';
 ````
 
 >那么这个索引的key本身就是name，查到对应的name直接返回就行了，无需回表查询。
@@ -211,7 +211,7 @@ SELECT id FROM table WHERE id=1;
 >这种情况就称之为覆盖索引了。
 
 #### 覆盖索引
-**覆盖索引即需要查询的字段正好是索引的字段，那么直接根据该索引，就可以查到数据了，而无需回表查询。**
+**覆盖索引即需要查询的字段正好是索引的字段，那么查找到该索引的字段就可以返回了，而无需回表查询。**
 
 >如主键索引，如果一条SQL需要查询主键，那么正好根据主键索引就可以查到主键。
 >
@@ -237,8 +237,8 @@ SELECT id FROM table WHERE id=1;
 ALTER TABLE table ADD INDEX index_name (num,name,age)
 ```
 
->那么当查询的条件有为:
->num / (num AND name) / (num AND name AND age)时，索引才生效。
+>那么当查询的条件为:
+>num 或 (num AND name) 或 (num AND name AND age)时，索引才生效。
 >所以在创建联合索引时，尽量把查询最频繁的那个字段作为索引的最左(第一个)字段。
 >查询的时候也尽量以这个字段为第一条件。
 
