--- a/gitbook_doc/datastructure_algorithm/数据结构.md
+++ b/gitbook_doc/datastructure_algorithm/数据结构.md
@@ -134,3 +134,58 @@ Hash表的某个位置从而进行快速定位。 其中映射函数被称为散
 
 
 Hash表源码: [HashTable](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/datastructure/hash/HashTable.java)
+
+
+#### 树
+树是一种抽象的数据类型，它是由n个有限节点组成的一个具有层次关系的集合，因其结构像一棵倒状的树，所以称其为树结构。
+
+![树结构](../img/datastructure_algorithm/树结构.png)
+
+树的重要的概念
+
+- 节点(结点): 在树结构中，存储数据的每个元素都被称为节点，如上图中的A，B，C等都是节点。
+
+- 父节点: 一个节点A如果包含了另一个节点B， 则节点A就是节点B的父节点，节点B是节点A的子节点。
+
+- 兄弟节点: 若多个节点具有相同的父节点，这些节点就是兄弟节点。
+
+- 根节点: 每棵非空的树都有且仅有一个根节点，上图的A就是根节点。
+
+- 叶子节点: 如果一个节点没有任何子节点，那么此节点就是叶子节点，上图的K，L，F，G等都是叶子节点。
+
+- 节点的度: 节点的度是指该节点拥有的子树数。
+
+- 树的度: 一棵树中，最大的节点度就是这棵树的度。
+
+- 树的深度: 从这个树的根节点出发，根节点处于第一层，其孩子节点处于第二层，依次往下。上图树的深度
+为4或3(计算方法的不同而已，如果把根节点算作第0层，那么树的深度就是3)。
+
+- 森林: 由m棵互不相交的树组成的集合被称为森林，上图中，以B，C，D为根节点的三棵子树就组成了森林。
+
+
+#### 二叉树
+二叉树是一种特殊的树结构，二叉树的每个节点最多有2棵子树，即二叉树的节点的度最大为2。
+
+![二叉树](../img/datastructure_algorithm/二叉树.png)
+
+二叉树主要有如下性质:
+
+- 二叉树的第 i 层最多有 2^(i-1) 个节点。
+
+- 如果二叉树的为 d，那么二叉树总共有不超过 (2^d)-1 个节点。
+
+二叉树有许多不同的种类，如: 满二叉树，完全二叉树，排序二叉树(二叉搜索树，二插查找树)，平衡二叉树等。
+
+#### 满二叉树
+满二叉树除了叶子节点，其他的节点的子树都为2,即除了叶子节点外，
+它的每个节点的度都为2。
+
+![满二叉树](../img/datastructure_algorithm/满二叉树.png)
+
+满二叉树主要有如下性质:
+
+- 满二叉树的第 i 层的节点有 2(i-1) 个。
+
+- 满二叉树的深度为 d ， 那么二叉树必须有: (2^d)-1 个节点。
+
+- 具有 n 个节点的满二叉树的深度为: log2(n+1)。
