--- a/gitbook_doc/datastructure_algorithm/算法.md
+++ b/gitbook_doc/datastructure_algorithm/算法.md
@@ -23,6 +23,8 @@
 
 归并排序源码: [MergeSort](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/algorithm/sort/MergeSort.java)
 
+堆排序源码: [HeapSort](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/algorithm/sort/HeapSort.java)
+
 基数排序源码: [RadixSort](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/algorithm/sort/RadixSort.java)
 
 计数排序源码: [CountingSort](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/algorithm/sort/CountingSort.java)
