修改:图片路径问题

--- a/gitbook_doc/datastructure_algorithm/数据结构.md
+++ b/gitbook_doc/datastructure_algorithm/数据结构.md
@@ -1,13 +1,16 @@
 <!-- TOC -->
  
- * [数据结构](#数据结构)
-   * [线性数据结构](#线性数据结构)
-      * [线性表](#线性表)
-      * [队列](#队列)
-      * [栈](#栈)
-   * [非线性数据结构](#非线性数据结构)
-      * [稀疏数组](#稀疏数组)
-      * [Hash表](#hash表)
+   * [数据结构](#数据结构)
+      * [线性数据结构](#线性数据结构)
+          * [线性表](#线性表)
+          * [队列](#队列)
+          * [栈](#栈)
+      * [非线性数据结构](#非线性数据结构)
+          * [稀疏数组](#稀疏数组)
+          * [Hash表](#hash表)
+          * [树](#树)
+          * [二叉树](#二叉树)
+          * [满二叉树](#满二叉树)
       
 <!-- /TOC -->
 
@@ -139,7 +142,7 @@ Hash表源码: [HashTable](https://github.com/guang19/framework-learning/blob/de
 #### 树
 树是一种抽象的数据类型，它是由n个有限节点组成的一个具有层次关系的集合，因其结构像一棵倒状的树，所以称其为树结构。
 
-![树结构](../img/datastructure_algorithm/树结构.png)
+![树结构](../../img/datastructure_algorithm/树结构.png)
 
 树的重要的概念
 
@@ -166,7 +169,7 @@ Hash表源码: [HashTable](https://github.com/guang19/framework-learning/blob/de
 #### 二叉树
 二叉树是一种特殊的树结构，二叉树的每个节点最多有2棵子树，即二叉树的节点的度最大为2。
 
-![二叉树](../img/datastructure_algorithm/二叉树.png)
+![二叉树](../../img/datastructure_algorithm/二叉树.png)
 
 二叉树主要有如下性质:
 
@@ -180,7 +183,7 @@ Hash表源码: [HashTable](https://github.com/guang19/framework-learning/blob/de
 满二叉树除了叶子节点，其他的节点的子树都为2,即除了叶子节点外，
 它的每个节点的度都为2。
 
-![满二叉树](../img/datastructure_algorithm/满二叉树.png)
+![满二叉树](../../img/datastructure_algorithm/满二叉树.png)
 
 满二叉树主要有如下性质:
 
