增加:二叉树删除操作

--- a/gitbook_doc/datastructure_algorithm/数据结构.md
+++ b/gitbook_doc/datastructure_algorithm/数据结构.md
@@ -1,20 +1,23 @@
 <!-- TOC -->
- 
-   * [数据结构](#数据结构)
-      * [线性数据结构](#线性数据结构)
-          * [线性表](#线性表)
-          * [队列](#队列)
-          * [栈](#栈)
-      * [非线性数据结构](#非线性数据结构)
-          * [稀疏数组](#稀疏数组)
-          * [Hash表](#hash表)
-          * [树](#树)
-          * [二叉树](#二叉树)
-          * [满二叉树](#满二叉树)
-      
+
+ * [数据结构与算法](#数据结构与算法)
+      * [数据结构](#数据结构)
+         * [线性数据结构](#线性数据结构)
+            * [线性表](#线性表)
+            * [队列](#队列)
+            * [栈](#栈)
+         * [非线性数据结构](#非线性数据结构)
+            * [稀疏数组](#稀疏数组)
+            * [Hash表](#hash表)
+            * [树](#树)
+            * [二叉树](#二叉树)
+            * [满二叉树](#满二叉树)
+            * [完全二叉树](#完全二叉树)
+            * [二叉查找树(BST)](#二叉查找树bst)
+
 <!-- /TOC -->
 
-# 数据结构
+#  数据结构
 
 ## 线性数据结构
 
@@ -22,7 +25,7 @@
 常见的线性结构有：**线性表，栈，队列，数组**等。
 
 
-#### 线性表
+### 线性表
 线性表(list)是最基本的数据结构，它是由零个或多个数据元素组成的有序集合，
 这个有序不是指的排序后的有序，而是指添加元素的顺序，假如2在1之前被放入了集合中，那么2肯定在1前面，不会因为大小原因而
 改变他们在集合中的顺序。
@@ -58,7 +61,7 @@ last节点的最后一个节点指向first节点。
 - [LinkedList](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/datastructure/list/LinkedList.java)
 
 
-#### 队列
+### 队列
 
 队列（queue）是一种采用先进先出(FIFO)策略的抽象数据结构，即最先进队列的数据元素，
 同样要最先出队列。队列跟我们排队买票一样，先来排队的肯定先买票，后来排队的的后买到票。
@@ -85,7 +88,8 @@ last节点的最后一个节点指向first节点。
 **PS:关于队列，可以参考: [掘金 - 队列](https://juejin.im/post/5d5fb74fe51d45620346b8d0) , 写得很详细。**
 
 
-#### 栈
+
+### 栈
 栈(stack)是一种后进先出(LIFO)的数据结构，即最后进入栈中的元素，最先出栈。
 栈有两个主要的操作: 入栈(push) 和 出栈(pop)。
 入栈操作是将一个元素置于栈顶，出栈操作是将栈顶元素取出。
@@ -94,19 +98,18 @@ last节点的最后一个节点指向first节点。
 
 栈同样可以由数组和链表实现，对于数组实现的栈来说，其容量肯定也有限制，所以个人认为实现栈的较好的方式是链表。
 
-栈实现源码：
-
-- [栈](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/datastructure/list/LinkedList.java)
+栈实现源码：[栈](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/datastructure/list/LinkedList.java)
 
 
 
-## 非线性数据结构
+### 非线性数据结构
 **非线性数据结构**中各个数据元素不再保持在一个线性序列中，每个数据元素可能与零个或者多个其他数据元素发生联系。
-根据关系的不同，可分为层次结构和群结构。常见的非线性数据结构主要有矩阵(多维数组)，广义表，树，图等。
+根据关系的不同，可分为层次结构和群结构。
 
+常见的非线性数据结构主要有矩阵(多维数组)，广义表，树，图等。
 
-#### 稀疏数组
-稀疏数组又被成为稀疏矩阵，它本质上是一个二维数组。
+### 稀疏数组
+稀疏数组又被称为稀疏矩阵，它本质上是一个二维数组。
 当一个数组中大部分元素都未被使用，仅有少部分被占用，这就造成了空间的浪费。
 为了解决这种问题，可以使用稀疏数组来保存该数组的数据，稀疏数组可以理解为原数组被压缩后的数组。
 
@@ -120,12 +123,11 @@ last节点的最后一个节点指向first节点。
 
 ![稀疏数组2](../../img/datastructure_algorithm/稀疏数组2.png)
 
-稀疏数组源码:
 
-[稀疏数组](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/datastructure/spasearray/SparseArray.java)
+稀疏数组源码: [稀疏数组](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/datastructure/spasearray/SparseArray.java)
 
 
-#### Hash表
+### Hash表
 Hash表是一种能够快速访问，快速删除与修改的数据结构。我们知道数组的访问速度非常快，链表的增删改等操作的效率也是
 非常高的，那有没有一种数据结构能够融合数组和链表的优点呢?可以说Hash表就是这样一种数据结构。
 
@@ -139,7 +141,7 @@ Hash表的某个位置从而进行快速定位。 其中映射函数被称为散
 Hash表源码: [HashTable](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/datastructure/hash/HashTable.java)
 
 
-#### 树
+### 树
 树是一种抽象的数据类型，它是由n个有限节点组成的一个具有层次关系的集合，因其结构像一棵倒状的树，所以称其为树结构。
 
 ![树结构](../../img/datastructure_algorithm/树结构.png)
@@ -166,7 +168,7 @@ Hash表源码: [HashTable](https://github.com/guang19/framework-learning/blob/de
 - 森林: 由m棵互不相交的树组成的集合被称为森林，上图中，以B，C，D为根节点的三棵子树就组成了森林。
 
 
-#### 二叉树
+### 二叉树
 二叉树是一种特殊的树结构，二叉树的每个节点最多有2棵子树，即二叉树的节点的度最大为2。
 
 ![二叉树](../../img/datastructure_algorithm/二叉树.png)
@@ -179,7 +181,16 @@ Hash表源码: [HashTable](https://github.com/guang19/framework-learning/blob/de
 
 二叉树有许多不同的种类，如: 满二叉树，完全二叉树，排序二叉树(二叉搜索树，二插查找树)，平衡二叉树等。
 
-#### 满二叉树
+和线性表一样，二叉树也有链表(节点)实现和数组实现，数组实现的二叉树被称为 **顺序存储的二叉树。**
+
+二叉树实现:
+
+- [BinaryTree](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/datastructure/tree/BinaryTree.java)
+
+- [ArrayBinaryTree](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/datastructure/tree/ArrayBinaryTree.java)
+
+
+### 满二叉树
 满二叉树除了叶子节点，其他的节点的子树都为2,即除了叶子节点外，
 它的每个节点的度都为2。
 
@@ -189,6 +200,48 @@ Hash表源码: [HashTable](https://github.com/guang19/framework-learning/blob/de
 
 - 满二叉树的第 i 层的节点有 2(i-1) 个。
 
-- 满二叉树的深度为 d ， 那么二叉树必须有: (2^d)-1 个节点。
+- 满二叉树的深度为 d ， 那么此满二叉树必须有: (2^d)-1 个节点。
 
 - 具有 n 个节点的满二叉树的深度为: log2(n+1)。
+
+
+### 完全二叉树
+如果一棵二叉树除去最后一层节点外是满二叉树，且最后一层节点是从左到右紧密分布的，那么此二叉树是一棵
+完全二叉树。
+
+![完全二叉树](../../img/datastructure_algorithm/完全二叉树.png)
+
+
+### 二叉查找树(BST)
+二叉查找树(Binary Search Tree)也被称为为二插排序树(Binary Sort Tree)。
+二叉排序树具有如下性质：
+
+- 若根节点的左子树不为空，那么其左子树的所有节点的值必将小于根节点的值。
+
+- 若根节点的右子树不为空，那么其右子树的所有节点的值必将小于根节点的值。
+
+- 左右子树也都是二叉查找树。
+
+BST的左子节点的值小于根节点的值小于右子节点的值，这代表着如果对一棵BST进行中序遍历，那么即可得到
+一个有序的数列。
+
+![二叉搜索树](../../img/datastructure_algorithm/二叉搜索树.png)
+
+**关于BST的操作，我觉得这里需要讲解一下他的删除操作。**
+BST的删除操作的节点需要分为三种情况，这里只探讨: 要删除的节点既有左子树也有右子树的情况。
+当BST需要执行删除操作的时候，如果要删除的节点既有左子节点，也有右子节点，那么就需要找到这个节点的
+前驱节点或者后继节点，然后使用前驱节点或后继节点替换掉要删除的节点，**这里的前驱节点和后继节点并不是指
+前一个或下一个，而是指按二叉树的中序遍历顺序来讲，遍历这个节点时，它的前一个节点和后一个节点。**
+
+如下图，要删除的节点为 47:
+
+![二叉搜索树删除节点](../../img/datastructure_algorithm/二叉搜索树删除节点.png)
+
+那么当中序遍历此BST时，47的前驱节点为37,后继节点为48，当使用前驱节点或后继节点替换掉要删除的节点后，
+那么会有如下2种结果:
+
+![二叉搜索树删除节点后](../../img/datastructure_algorithm/二叉搜索树删除节点后.png)
+
+至于使用前驱还是后继，这个可以自行选择。
+
+二叉查找树实现: [BinarySearchTree](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/datastructure/tree/ArrayBinaryTree.java)
