--- a/gitbook_doc/datastructure_algorithm/算法.md
+++ b/gitbook_doc/datastructure_algorithm/算法.md
@@ -1,9 +1,13 @@
-# 算法
-
+<!-- TOC -->
+  
    * [算法](#算法)
        * [排序算法](#排序算法)
        * [查找算法](#查找算法)
        * [双索引算法-快慢指针(leetcode)](#双索引算法-快慢指针leetcode)
+       
+<!-- /TOC -->
+
+# 算法
 
 ### 排序算法
 
