增加:设计模式

--- a/gitbook_doc/datastructure_algorithm/算法.md
+++ b/gitbook_doc/datastructure_algorithm/算法.md
@@ -1,9 +1,10 @@
 <!-- TOC -->
   
    * [算法](#算法)
-       * [排序算法](#排序算法)
-       * [查找算法](#查找算法)
-       * [双索引算法-快慢指针(leetcode)](#双索引算法-快慢指针leetcode)
+      * [排序算法](#排序算法)
+      * [查找算法](#查找算法)
+      * [双索引算法-快慢指针(leetcode)](#双索引算法-快慢指针leetcode)
+      * [字符串匹配算法](#字符串匹配算法)
        
 <!-- /TOC -->
 
@@ -76,3 +77,10 @@ leetcode-283题: 移动零源码：[MoveZero](https://github.com/guang19/framewo
 leetcode-26题: 删除数组的重复项源码：[DeleteDuplicate](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/algorithm/collisionPointer/DeleteDuplicate.java)
 
 leetcode-27题: 移除元素源码：[RemoveElement](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/algorithm/collisionPointer/RemoveElement.java)
+
+
+### 字符串匹配算法
+
+暴力匹配算法源码: [ViolenceMatch](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/algorithm/strmatch/ViolenceMatch.java)
+
+kmp匹配算法源码: [KMPMatch](https://github.com/guang19/framework-learning/blob/dev/datastructure_algorithm/src/main/java/com/github/anhTom2000/algorithm/strmatch/KMPMatch.java)
