增加:单例模式

--- a/gitbook_doc/jdk_jvm_juc-learning/类的生命周期.md
+++ b/gitbook_doc/jdk_jvm_juc-learning/类的生命周期.md
@@ -79,10 +79,10 @@ JVM会对字节流进行如下验证:
 
 在这个阶段,**只有主动使用类才会初始化类，总共有8种情况会涉及到主动使用类。**
 
-1. 当jvm执行new指令时会初始化类。即当程序创建一个类的实例对象。
-2. 当jvm执行getstatic指令时会初始化类。即程序访问类的静态变量(不是静态常量，常量归属于运行时常量池)。
-3. 当jvm执行putstatic指令时会初始化类。即程序给类的静态变量赋值。
-4. 当jvm执行invokestatic指令时会初始化类。即程序调用类的静态方法。
+1. 当jvm执行new指令时会初始化类没，即当程序创建一个类的实例对象。
+2. 当jvm执行getstatic指令时会初始化类，即程序访问类的静态变量(不是静态常量，常量归属于运行时常量池)。
+3. 当jvm执行putstatic指令时会初始化类，即程序给类的静态变量赋值。
+4. 当jvm执行invokestatic指令时会初始化类，即程序调用类的静态方法。
 5. 当使用反射主动调用这个类时,也会初始化类,如Class.forname("..."),newInstance()等等。
 6. 当初始化一个子类的时候，会先初始化这个子类的所有父类，然后才会初始化这个子类。
 7. 当一个类是启动类时，即这个类拥有main方法，那么jvm会首先初始化这个类。
