增加:原型模式

--- a/gitbook_doc/rdbms-learning/事务.md
+++ b/gitbook_doc/rdbms-learning/事务.md
@@ -3,6 +3,7 @@
    * [事务](#事务)
        * [什么是事务?](#什么是事务)
        * [事务的四大特性(ACID)](#事务的四大特性acid)
+       * [DBMS中实现事务持久性的子系统是什么](#DBMS中实现事务持久性的子系统是什么)
        * [事务的隔离级别](#事务的隔离级别)
        * [事务隔离级别引发的问题](#事务隔离级别引发的问题)
        * [快照读](#快照读)
@@ -36,6 +37,13 @@
 一个事务的失败，不会影响另一个事务。
 
 - **持久性(Durability)**: 持久性指事务对数据库的操作产生的影响应该是持久的，不会因为外部原因而发生改变。
+
+#### DBMS中实现事务持久性的子系统是什么?
+
+- 原子性：事务是一组不可分割的操作单元，这组单元要么同时成功要么同时失败（由DBMS的事务管理子系统来实现）；
+- 一致性：事务前后的数据完整性要保持一致（由DBMS的完整性子系统执行测试任务）；
+- 隔离性: 多个用户的事务之间不要相互影响，要相互隔离（由DBMS的并发控制子系统实现）；
+- 持久性:一个事务一旦提交，那么它对数据库产生的影响就是永久的不可逆的，如果后面再回滚或者出异常，都不会影响已提交的事务（由DBMS的恢复管理子系统实现的）
 
 #### 事务的隔离级别
 
