--- a/linux-learning/进程间通信.md
+++ b/linux-learning/进程间通信.md
@@ -33,7 +33,7 @@
 
 - 匿名管道由于没有命名，所以只能用于具有亲缘关系的父子进程或兄弟进程之间。
 
-- 管道的实质是内核缓冲区，它可以被看做一个FIFOF先进先出的队列，
+- 管道的实质是内核缓冲区，它可以被看做一个FIFO先进先出的队列，
 管道一端的进程将数据写入队列尾部，另一端进程从头部读取数据。
 
 - 管道发送的是无数据格式的字节流，这就要求进行管道通信的2端进程需要预先定义好数据格式。
