修改:部分文章的语义&部分文章的错误图片路径

--- a/jdk-jvm-juc/对象在内存中的布局.md
+++ b/jdk-jvm-juc/对象在内存中的布局.md
@@ -28,20 +28,22 @@
            
 #### 实例数据
 实例数据存储着对象在程序中被定义的各个字段的数据,也就是对象的字段的
-数据。**如果一个类没有字段，也就不存在实例数据，所以这是它不固定的原因。**
-        
+数据。**如果一个类没有实例字段，也就不存在实例数据，所以这是它不固定的原因。**
+
+
 #### 对齐填充
 **Java对象的小必须是8字节的倍数**,像13,15这种非8的倍数的对象的大小,
 不足或多余的部分就要使用对齐填充数据补齐。
 **如果Java对象大小正好是8的倍数,那么就无需对齐填充数据。**
-    
+
+
 ### 对象头
 关于对象头，在hotspot中，opendjdk是这样描述的:
 
 ![对象头描述](../img/jdk-jvm-juc/对象头的描述.png)
 
 大意是说: **对象头是jvm在每次GC时管理的对象的通用结构，包含了对象的布局，类型(Class Type),GC状态，
-同步状态和hashcode等信息，在数组中，还会跟随数组的长度。java对象和vm对象都具有通用的对象头格式。**
+同步状态和hashcode等信息，在数组中，还会跟随数组的长度。**
 
 在hotspot虚拟机中的对象头由2部分组成:
 mark 和 metadata(包括klass* , compressed_klass)(**如果是数组,对象头还会保存数组长度**)(见oop.hpp文件)
