--- a/gitbook_doc/rdbms-learning/索引.md
+++ b/gitbook_doc/rdbms-learning/索引.md
@@ -1,6 +1,6 @@
 <!-- TOC -->
 
- * [索引](#索引)
+   * [索引](#索引)
      * [什么是索引?](#什么是索引)
         * [索引的优点](#索引的优点)
         * [索引的缺点](#索引的缺点)
@@ -45,15 +45,18 @@
 >
 >如果有目录了，我们只需要先去目录里查找字所在的页数，然后直接翻到那一页就行了。
 
+
 #### 索引的优点
 **索引最大的优点就是数据的检索效率高，这也是创建和使用索引的原因。
 毕竟大部分系统的读请求总是大于写请求的。**
+
 
 #### 索引的缺点
 * **创建索引和维护索引需要耗费许多时间** : 当对表中的数据进行增删改的时候，如果数据有索引，
 那么索引也需要动态的修改，会降低SQL执行效率。
 
 * **占用物理存储空间** : 索引需要使用物理文件存储，也会耗费一定空间。
+
 
 #### B树和B+树区别
 
@@ -68,6 +71,7 @@
 且叶子节点的顺序检索很明显。**
 
 ![B+树](../../img/database/mysql/B+树.png)
+
 
 #### Hash索引
 * **Hash索引定位快**
@@ -102,6 +106,7 @@ SELECT * FROM tb1 WHERE id < 500;
 **在mysql的InnoDB的表中，当没有显示的指定表的主键时，
 InnoDB会自动先检查表中是否有唯一索引的字段。
 如果有，则选择该字段为默认的主键，否则InnoDB将会自动创建一个6Byte的自增主键。**
+
 
 #### 二级索引(辅助索引)
 **二级索引又称为辅助索引，是因为二级索引的叶子节点存储着主键。
@@ -140,6 +145,7 @@ Mysql5.6之前只有MYISAM引擎支持全文索引，5.6之后InnoDB也支持了
 对于InnoDB引擎表来说，该表的索引(B+树)的每个非叶子节点存储索引，
 叶子节点存储索引和索引对应的数据。
 
+
 #### 聚集索引的优点
 
 聚集索引的查询速度非常的快，因为整个B+树本身就是一颗多叉平衡树，
@@ -156,6 +162,7 @@ Mysql5.6之前只有MYISAM引擎支持全文索引，5.6之后InnoDB也支持了
 >而且况聚集索引的叶子节点还存放着数据，修改代价肯定是较大的，
 >所以对于主键索引来说，主键一般都是不可被修改的。
 
+
 #### 非聚集索引
 
 **非聚集索引即索引结构和数据分开存放的索引。**
@@ -170,15 +177,13 @@ MYISAM引擎的表的.MYI文件包含了表的索引，
 因为二级索引的叶子节点就存放的是主键。**
 
 #### 非聚集索引的优点
-* 更新代价比聚集索引要小
->非聚集索引的更新代价就没有聚集索引那么大了，非聚集索引的叶子节点是不存放数据的
+* 更新代价比聚集索引要小：非聚集索引的更新代价就没有聚集索引那么大了，非聚集索引的叶子节点是不存放数据的
 
 #### 非聚集索引的缺点
 * 跟聚集索引一样，非聚集索引也依赖于有序的数据
 
-* 可能会二次查询(回表)
->这应该是非聚集索引最大的缺点了。 
->当查到索引对应的指针或主键后，可能还需要根据指针或主键再到数据文件或表中查询。
+* 可能会二次查询(回表)：这应该是非聚集索引最大的缺点了。
+当查到索引对应的指针或主键后，可能还需要根据指针或主键再到数据文件或表中查询。
 
 这是Mysql的表的文件截图:
 
@@ -187,6 +192,7 @@ MYISAM引擎的表的.MYI文件包含了表的索引，
 聚集索引和非聚集索引:
 
 ![B+树聚集索引](../../img/database/mysql/B+树索引.png)
+
 
 #### 非聚集索引一定回表查询吗(覆盖索引)?
 
@@ -210,6 +216,7 @@ SELECT id FROM table WHERE id=1;
 >主键索引本身的key就是主键，查到返回就行了。
 >这种情况就称之为覆盖索引了。
 
+
 #### 覆盖索引
 **覆盖索引即需要查询的字段正好是索引的字段，那么查找到该索引的字段就可以返回了，而无需回表查询。**
 
@@ -227,8 +234,10 @@ SELECT id FROM table WHERE id=1;
 #### 单列索引
 单列索引即由一列属性组成的索引。
 
+
 #### 联合索引(多列索引)
 联合索引即由多列属性组成索引。
+
 
 #### 最左前缀原则
 >假设创建的联合索引由三个字段组成: 
@@ -251,11 +260,13 @@ ALTER TABLE table ADD INDEX index_name (num,name,age)
 
 ![联合索引生效](../../img/database/mysql/联合索引之查询条件生效.png)
 
+
 ### 索引创建注意点
 
 #### 最左前缀原则
 >虽然我目前的Mysql版本较高，好像不遵守最左前缀原则，索引也会生效。
->但是我们仍应遵守最左前缀原则，以免版本更迭带来的麻烦。
+>但是我们仍应遵守最左前缀原则。
+
 
 #### 选择合适的字段
 
@@ -270,11 +281,13 @@ ALTER TABLE table ADD INDEX index_name (num,name,age)
 * 被经常频繁用于连接的字段: 经常用于连接的字段可能是一些外键列，外键列并不是一定要建立外键，
 只是说该列涉及到表与表的关系。对于频繁被连接查询的字段，可以考虑建立索引，提高多表连接查询的效率。
 
+
 #### 不合适的字段
 * 被频繁更新的字段应该慎重建立索引: 虽然索引能带来查询上的效率，但是维护索引的成本也是不小的。
 如果一个字段不被经常查询，反而被经常修改，那么就更不应该在这种字段上建立索引了。
 
 * 不被经常查询的字段没有必要建立索引
+
 
 #### 尽可能的考虑建立联合索引而不是单列索引
 
@@ -285,9 +298,11 @@ ALTER TABLE table ADD INDEX index_name (num,name,age)
 如果是联合索引，多个字段在一个索引上，那么将会节约很大磁盘空间，
 且修改数据的操作效率也会提升。
 
+
 #### 考虑在字符串类型的字段上使用前缀索引代替普通索引
 **前缀索引仅限于字符串类型，较普通索引会占用更小的空间，**
 所以可以考虑使用前缀索引带替普通索引。
+
 
 #### 使用索引一定能提高查询性能吗?
 大多数情况下，索引查询都是比全表扫描要快的。
