增加:站内消息系统的设计完结

--- a/gitbook_doc/system_architecture_design/站内消息系统的设计.md
+++ b/gitbook_doc/system_architecture_design/站内消息系统的设计.md
@@ -5,7 +5,7 @@
 
 我以b站举例（个人认为b站的消息系统是我见过的非常完美的，UI也最为人性化的）：
 
-![b站消息中心页面](../img/站内消息系统的设计/b站消息中心页面.png)
+![b站消息中心页面](../../img/站内消息系统的设计/b站消息中心页面.png)
 
 可以看到b站把消息大致分为了三类：
 1. 系统推送的通知(System Notice)；
@@ -18,7 +18,7 @@
 举个例子：比如你在某个视频或某篇文章下发表了评论，有100个人给你的评论点了赞，
 那么你希望消息页面呈现的是一个一个用户给你点赞的提醒，还是像以下聚合之后的提醒：
 
-![消息的聚合](../img/站内消息系统的设计/消息的聚合.png)
+![消息的聚合](../../img/站内消息系统的设计/消息的聚合.png)
 
 我相信你大概率会选择后者。
 
@@ -151,7 +151,7 @@ AND action = 点赞 AND state = FALSE GROUP BY source_id , source_type;
 站内私信一般都是点到点的，且要求是实时的，服务端可以采用Netty等高性能网络通信框架完成请求。
 我们还是以b站为例，看看它是怎么设计的：
 
-![站内消息系统的设计](../img/站内消息系统的设计/b站私信页面.png)
+![站内消息系统的设计](../../img/站内消息系统的设计/b站私信页面.png)
 
 b站的私信部分可以分为两部分： 一部分是左边的与不同用户的聊天室；另一部分是与当前正在对话的用户的对话框，
 显示了当前用户与目标用户的所有消息。
@@ -192,7 +192,7 @@ b站的私信部分可以分为两部分： 一部分是左边的与不同用户
 
 下面是b站的消息设置：
 
-![消息设置](../img/站内消息系统的设计/消息设置.png)
+![消息设置](../../img/站内消息系统的设计/消息设置.png)
 
 可以看到b站还添加了陌生人选项，也就是说如果给你发送私信的用户不是你关注的用户，那么视之为陌生人私信，
 就不接受。
