增加:编码解码器codec

--- a/gitbook_doc/jdk-jvm-juc/类的生命周期.md
+++ b/gitbook_doc/jdk-jvm-juc/类的生命周期.md
@@ -71,8 +71,7 @@ JVM会对字节流进行如下验证:
 2.准备: 准备阶段会为类的静态变量初始化零值，如(0,0L,null,false).
 
 3.解析: 解析阶段会将常量池中的符号引用转为直接引用。
-符号引用包括类的全限定名，方法名和描述符，字段名和描述符。  
-直接引用是指向目标的指针，可以简单理解为目标的内存地址。
+符号引用包括类的全限定名，方法名的描述符，字段名的描述符。直接引用可以简单理解为目标的内存地址。
 
 #### 初始化
 >初始化阶段是类加载过程的最后一个阶段。
